--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "axios": "^1.13.2",
+        "cheerio": "^1.1.2",
         "dotenv": "^16.0.0",
         "jsonwebtoken": "^9.0.0",
         "mongodb": "^6.21.0"
@@ -27,3 +28,4 @@
     "author": "Henrique0440",
     "license": "MIT"
 }
+
